--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -1,93 +1,80 @@
-<ng-container *ngIf="field.typeOf(types.TEXT)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <mat-hint>{{field.hint}}</mat-hint>
-        <input [id]="field.id" type="text" [attr.autocomplete]="field.autocomplete" matInput [formControl]="field">
-    </mat-form-field>
+<ng-container *ngIf="!rawField();">
+    <ng-container [ngSwitch]="normalField().type">
+        <ng-container *ngSwitchCase="types.TEXT">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <mat-hint>{{normalField().hint}}</mat-hint>
+                <input [id]="normalField().id" type="text" [attr.autocomplete]="normalField().autocomplete" matInput
+                    [formControl]="field">
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.PASSWORD">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <mat-hint>{{normalField().hint}}</mat-hint>
+                <input [id]="normalField().id" #input type="password" [attr.autocomplete]="normalField().autocomplete"
+                    matInput [formControl]="field">
+                <mat-icon class="pointer text-muted font-size-20 position-relative bottom-4" [togglePasswod]="input"
+                    matSuffix>
+                    lock</mat-icon>
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.TEXTAREA">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <textarea [id]="normalField().id" matInput [formControl]="field"></textarea>
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.EMAIL">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <input [id]="normalField().id" type="email" matInput
+                    [attr.autocomplete]="normalField().autocomplete || 'email'" [formControl]="field">
+                <mat-error *ngIf="normalField().hasError('email')">Please enter correct email</mat-error>
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.NUMBER">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <input [id]="normalField().id" type="number" matInput [formControl]="field">
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.DATE">
+            <mat-form-field>
+                <mat-label>{{ normalField().label | translate }}</mat-label>
+                <input [id]="normalField().id" matInput [max]="dateField().max" [min]="dateField().min"
+                    (focus)="datePicker.open()" [matDatepicker]="datePicker" [formControl]="field">
+                <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+                <mat-datepicker #datePicker></mat-datepicker>
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.CHECKBOX">
+            <mat-checkbox [id]="normalField().id" [formControl]="field">{{normalField().label | translate}}
+            </mat-checkbox>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.SELECT">
+            <mat-form-field>
+                <mat-label>{{normalField().label | translate}}</mat-label>
+                <mat-select [multiple]="selectField().multiple" [id]="normalField().id" [formControl]="field">
+                    <mat-option *ngFor="let option of (selectField().options | async)" [value]="option.key">
+                        {{option.value}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.RADIO">
+            <mat-label>{{normalField().label | translate}}</mat-label>
+            <mat-radio-group [id]="normalField().id" class="d-flex flex-column">
+                <mat-radio-button *ngFor="let option of (selectField().options | async)" [value]="option.key">
+                    {{option.value}}
+                </mat-radio-button>
+            </mat-radio-group>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.TEL">
+            <app-mobile-control [formControl]="$any(normalField())"></app-mobile-control>
+        </ng-container>
+        <ng-container *ngSwitchCase="types.COUNTRY">
+            <app-country-control [id]="normalField().id" [formControl]="$any(normalField())"></app-country-control>
+        </ng-container>
+    </ng-container>
 </ng-container>
-<ng-container *ngIf="field.typeOf(types.PASSWORD)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <mat-hint>{{field.hint}}</mat-hint>
-        <input [id]="field.id" #input type="password" [attr.autocomplete]="field.autocomplete" matInput
-            [formControl]="field">
-        <mat-icon class="pointer text-muted font-size-20 position-relative bottom-4" [togglePasswod]="input" matSuffix>
-            lock</mat-icon>
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.TEXTAREA)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <textarea [id]="field.id" matInput [formControl]="field"></textarea>
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.EMAIL)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <input [id]="field.id" type="email" matInput [attr.autocomplete]="field.autocomplete || 'email'"
-            [formControl]="field">
-        <mat-error *ngIf="field.hasError('email')">Please enter correct email</mat-error>
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.NUMBER)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <input [id]="field.id" type="number" matInput [formControl]="field">
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.DATE)">
-    <mat-form-field>
-        <mat-label>{{ field.label | translate }}</mat-label>
-        <input [id]="field.id" matInput [max]="field.max" [min]="field.min" (focus)="datePicker.open()"
-            [matDatepicker]="datePicker" [formControl]="field">
-        <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
-        <mat-datepicker #datePicker></mat-datepicker>
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.CHECKBOX)">
-    <mat-checkbox [id]="field.id" [formControl]="field">{{field.label | translate}}</mat-checkbox>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.SELECT)">
-    <mat-form-field>
-        <mat-label>{{field.label | translate}}</mat-label>
-        <mat-select [multiple]="field.multiple" [id]="field.id" [formControl]="field">
-            <mat-option *ngFor="let option of (field.options | async)" [value]="option.key">
-                {{option.value}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.RADIO)">
-    <mat-label>{{field.label | translate}}</mat-label>
-    <mat-radio-group [id]="field.id" class="d-flex flex-column">
-        <mat-radio-button *ngFor="let option of (field.options | async)" [value]="option.key">
-            {{option.value}}
-        </mat-radio-button>
-    </mat-radio-group>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.TEL)">
-    <app-mobile-control [formControl]="field"></app-mobile-control>
-</ng-container>
-<ng-container *ngIf="field.typeOf(types.COUNTRY)">
-    <app-country-control [id]="field.id" [formControl]="field"></app-country-control>
-</ng-container>
-<!-- TODO: Setup datetime type -->
-<!-- TODO: provide style object in Field class, it should be flutter like style, 
-            new Field(
-                style: {
-                    prefix:,
-                    suffix:,
-                },
-            );
-            and split the field to be base class in order to RawField to extend it.
-            RawField shouldn't have the style object.
-        -->
-<!-- TODO: {
-            new RawField({
-                component: MobileControlComponent,
-                onceComponentCreated(instance: MobileControlComponent){
-    
-                },
-                ...fieldOptions
-            });
-        } -->
