use ngx-form-factory

--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -2,14 +2,13 @@
     <div class="row align-items-center justify-content-center h-100">
         <div class="col-12 col-md-7">
             <ng-container *ngIf="steps[0]">
-                <app-form-container title="Forgot password" [formGroup]="verificationForm"
-                    (onSubmit)="checkUser($event)">
+                <ngx-form-factory title="Forgot password" [formGroup]="verificationForm" (onSubmit)="checkUser($event)">
                     <span form-header>Enter your information below and we'll help you to reset your password</span>
                     <ng-container ngProjectAs="[form-footer]" [ngTemplateOutlet]="loginButton"></ng-container>
-                </app-form-container>
+                </ngx-form-factory>
             </ng-container>
             <ng-container *ngIf="steps[1]">
-                <app-form-container title="Confirm your account information" [formGroup]="sendPincodeForm"
+                <ngx-form-factory title="Confirm your account information" [formGroup]="sendPincodeForm"
                     [external]="true" (onSubmit)="sendPincode($event)">
                     <span form-header>How would you like to verify your account</span>
                     <ng-container ngProjectAs="[form-body]">
@@ -21,7 +20,7 @@
                                         Receive an email
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
-                                <app-field-factory [field]="sendPincodeForm.get('email')"></app-field-factory>
+                                <ngx-field-factory [field]="sendPincodeForm.get('email')"></ngx-field-factory>
                                 <p>By continuing you confirm that you're authorized to access this email account.</p>
                             </mat-expansion-panel>
                             <mat-expansion-panel (afterCollapse)="sendPincodeForm.reset()"
@@ -31,14 +30,14 @@
                                         Receive a text message
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
-                                <app-field-factory [field]="sendPincodeForm.get('mobile')"></app-field-factory>
+                                <ngx-field-factory [field]="sendPincodeForm.get('mobile')"></ngx-field-factory>
                                 <p>By continuing you confirm that you're authorized to use this phone number and agree
                                     to receive text messages.</p>
                             </mat-expansion-panel>
                         </mat-accordion>
                     </ng-container>
                     <ng-container ngProjectAs="[form-footer]" [ngTemplateOutlet]="loginButton"></ng-container>
-                </app-form-container>
+                </ngx-form-factory>
             </ng-container>
             <ng-container *ngIf="steps[2]">
                 <app-pincode-box [data]="{proxy: sendPincodeType, type: 'account'}" (onSubmit)="checkPincode($event)"
@@ -46,10 +45,10 @@
                 </app-pincode-box>
             </ng-container>
             <ng-container *ngIf="steps[3]">
-                <app-form-container title="Reset password" [formGroup]="resetPasswordForm"
+                <ngx-form-factory title="Reset password" [formGroup]="resetPasswordForm"
                     (onSubmit)="resetPassword($event)">
                     <span form-header>Don't forgot it again ^^</span>
-                </app-form-container>
+                </ngx-form-factory>
             </ng-container>
         </div>
     </div>
