--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container h-100">
   <div class="row align-items-center justify-content-center h-100">
     <div class="col-12 col-md-8 col-lg-6">
-      <app-form-container title="Login in to continue" [formGroup]="form" (onSubmit)="login($event)">
+      <ngx-form-factory title="Login in to continue" [formGroup]="form" (onSubmit)="login($event)">
         <span form-header class="text-uppercase">Angular Buildozer</span>
         <ng-container ngProjectAs="[form-body]">
-          <app-field-factory [field]="rememberMeCheckBox"></app-field-factory>
+          <ngx-field-factory [field]="rememberMeCheckBox"></ngx-field-factory>
         </ng-container>
         <section form-footer class="d-flex align-items-center flex-column">
           <a mat-button id="registerButton" [routerLink]="['../', 'register']">
@@ -14,7 +14,7 @@
             <small class="text-muted">{{ 'forgot_password' | translate }}</small>
           </a>
         </section>
-      </app-form-container>
+      </ngx-form-factory>
     </div>
   </div>
 </div>
