feat: add redirect url on logout

--- a/src/app/pages/portal/forget-password/forget-password.component.html
+++ b/src/app/pages/portal/forget-password/forget-password.component.html
@@ -9,7 +9,7 @@
             </ng-container>
             <ng-container *ngIf="steps[1]">
                 <ngx-form-factory title="Confirm your account information" [formGroup]="sendPincodeForm"
-                    [external]="true" (onSubmit)="sendPincode($event)">
+                    [implicitFields]="false" (onSubmit)="sendPincode($event)">
                     <span form-header>How would you like to verify your account</span>
                     <ng-container ngProjectAs="[form-body]">
                         <mat-accordion>
