--- a/src/app/widget/progress-bar/progress-bar.component.html
+++ b/src/app/widget/progress-bar/progress-bar.component.html
@@ -1,1 +1,4 @@
-<mat-progress-bar *ngIf="$visible | async" mode="indeterminate"></mat-progress-bar>
+<ng-container *ngIf="(visible | async)">
+    <mat-progress-bar color="accent" mode="indeterminate">
+    </mat-progress-bar>
+</ng-container>
