feat: add setup script to prepare the codebase for new project

--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center">
   <img ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
   <div class="text-wrapper">
-    <h6 class="mb-0 mt-2 ml-3 drawer-invisible">{{ 'application_title' | translate }} | {{($user | async)?.username}}
+    <h6 class="mb-0 mt-2 ml-3 drawer-invisible">{{ 'application_name' | translate }} | {{($user | async)?.username}}
     </h6>
   </div>
 </div>
