--- a/src/app/partials/datagrid/datagrid.component.html
+++ b/src/app/partials/datagrid/datagrid.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" matSort class="w-100 border">
+<table mat-table [dataSource]="dataSource" matSort class="w-100 border" (matSortChange)="sortData($event)">
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> {{dataGrid.actionColumn.title | translate}} </th>
         <td mat-cell *matCellDef="let element">
@@ -11,7 +11,9 @@
     </ng-container>
     <ng-container *ngFor="let column of dataGrid?.columns">
         <ng-container [matColumnDef]="column.key">
-            <th mat-header-cell *matHeaderCellDef> {{column.title | translate}} </th>
+            <th [id]="column.key" mat-header-cell [mat-sort-header]="column.key" [disableClear]="true"
+                [disabled]="!column.sortable" *matHeaderCellDef>
+                {{column.title | translate}} </th>
             <td mat-cell *matCellDef="let element">
                 <ng-container [ngSwitch]="column.typeOf(resolveValue(column, element))">
                     <ng-container *ngSwitchCase="EColumnTypes.TEXT">
