--- a/src/app/partials/datagrid/datagrid.component.html
+++ b/src/app/partials/datagrid/datagrid.component.html
@@ -35,5 +35,6 @@
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
 </table>
-<mat-paginator (page)="onPaginate($event)" [pageSizeOptions]="[10, 15, 20]" [showFirstLastButtons]="true">
+<mat-paginator (page)="onPaginate($event)" [pageSize]="20" [pageSizeOptions]="[10, 15, 20]"
+    [showFirstLastButtons]="true">
 </mat-paginator>
