--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,15 @@
-@import '~bootstrap/scss/bootstrap.scss';
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import './app/app.theme';
-@import 'assets/scss/main';
+@import "~bootstrap/scss/bootstrap.scss";
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "./app/app.theme";
+@import "assets/scss/main";
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap");
 $typography: mat-typography-config(
   $font-family: "'Quicksand', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400),
 );
 
 @include angular-material-typography($typography);
-@include border_radius(2);
-@include font_size(1.25);
-@include border_width;
-@include bootstrab_default;
 
 .media-dialog {
   mat-dialog-container {
