--- a/src/app/pages/portal/register/register.component.html
+++ b/src/app/pages/portal/register/register.component.html
@@ -1,49 +1,47 @@
 <div class="container h-100">
-  <div class="row align-items-center justify-content-center h-100">
-    <div class="col-12 col-md-10">
-      <ngx-form-factory title="Register in our system" (onSubmit)="register($event)" [formGroup]="form">
-        <ng-container ngProjectAs="[form-body]">
-          <!-- TODO: Create custom password control -->
-          <ng-container *ngIf="$passwordVisible | async">
-            <div [ngClass]="[form.hasControlError('password', 'uppercase') ? 'text-danger':'text-success']"
-              class="d-flex align-items-center">
-              <mat-icon class="center-flex font-size-13 font-weight-bold">
-                {{form.hasControlError('password', 'uppercase') ? 'clear': 'check'}}
-              </mat-icon>
-              <span>at least one uppercase charachter</span>
-            </div>
-            <div [ngClass]="[form.hasControlError('password', 'lowercase') ? 'text-danger':'text-success']"
-              class="d-flex align-items-center">
-              <mat-icon class="center-flex font-size-13 font-weight-bold">
-                {{form.hasControlError('password', 'lowercase') ? 'clear': 'check'}}
-              </mat-icon>
-              <span>at least one lowercase charachter</span>
-            </div>
-            <div [ngClass]="[form.hasControlError('password', 'special_character') ? 'text-danger':'text-success']"
-              class="d-flex align-items-center">
-              <mat-icon class="center-flex font-size-13 font-weight-bold">
-                {{form.hasControlError('password', 'special_character') ? 'clear': 'check'}}
-              </mat-icon>
-              <span>at least one special charachter</span>
-            </div>
-            <div [ngClass]="[form.hasControlError('password', 'between') ? 'text-danger':'text-success']"
-              class="d-flex align-items-center">
-              <mat-icon class="center-flex font-size-13 font-weight-bold">
-                {{form.hasControlError('password', 'between') ? 'clear': 'check'}}
-              </mat-icon>
-              <span>between 8 and 16 charachter</span>
-            </div>
-            <div [ngClass]="[form.hasControlError('password', 'number') ? 'text-danger':'text-success']"
-              class="d-flex align-items-center">
-              <mat-icon class="center-flex font-size-13 font-weight-bold">
-                {{form.hasControlError('password', 'number') ? 'clear': 'check'}}
-              </mat-icon>
-              <span>at least one number</span>
-            </div>
-          </ng-container>
+  <div class="row h-100 center-flex">
+    <ngx-form-factory title="Register in our system" (onSubmit)="register($event)" [formGroup]="form">
+      <ng-container ngProjectAs="[form-body]">
+        <!-- TODO: Create custom password control -->
+        <ng-container *ngIf="$passwordVisible | async">
+          <div [ngClass]="[form.hasControlError('password', 'uppercase') ? 'text-danger':'text-success']"
+            class="d-flex align-items-center">
+            <mat-icon class="center-flex font-size-13 font-weight-bold">
+              {{form.hasControlError('password', 'uppercase') ? 'clear': 'check'}}
+            </mat-icon>
+            <span>at least one uppercase charachter</span>
+          </div>
+          <div [ngClass]="[form.hasControlError('password', 'lowercase') ? 'text-danger':'text-success']"
+            class="d-flex align-items-center">
+            <mat-icon class="center-flex font-size-13 font-weight-bold">
+              {{form.hasControlError('password', 'lowercase') ? 'clear': 'check'}}
+            </mat-icon>
+            <span>at least one lowercase charachter</span>
+          </div>
+          <div [ngClass]="[form.hasControlError('password', 'special_character') ? 'text-danger':'text-success']"
+            class="d-flex align-items-center">
+            <mat-icon class="center-flex font-size-13 font-weight-bold">
+              {{form.hasControlError('password', 'special_character') ? 'clear': 'check'}}
+            </mat-icon>
+            <span>at least one special charachter</span>
+          </div>
+          <div [ngClass]="[form.hasControlError('password', 'between') ? 'text-danger':'text-success']"
+            class="d-flex align-items-center">
+            <mat-icon class="center-flex font-size-13 font-weight-bold">
+              {{form.hasControlError('password', 'between') ? 'clear': 'check'}}
+            </mat-icon>
+            <span>between 8 and 16 charachter</span>
+          </div>
+          <div [ngClass]="[form.hasControlError('password', 'number') ? 'text-danger':'text-success']"
+            class="d-flex align-items-center">
+            <mat-icon class="center-flex font-size-13 font-weight-bold">
+              {{form.hasControlError('password', 'number') ? 'clear': 'check'}}
+            </mat-icon>
+            <span>at least one number</span>
+          </div>
         </ng-container>
-        <button form-footer color="primary" mat-button [routerLink]="['../', 'login']">Login</button>
-      </ngx-form-factory>
-    </div>
+      </ng-container>
+      <button form-footer color="primary" mat-button [routerLink]="['../', 'login']">Login</button>
+    </ngx-form-factory>
   </div>
 </div>
