--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,5 +1,5 @@
-@import "~bootstrap/scss/bootstrap-grid";
-@import "variables";
+@import '~bootstrap/scss/bootstrap-grid';
+@import 'variables';
 
 @mixin placeholder {
   &::-webkit-input-placeholder {
@@ -129,7 +129,7 @@
     height: 100%;
     background-color: $color;
     z-index: $zIndex;
-    content: "";
+    content: '';
   }
 }
 
