feat(Chat): add webrtc video calling

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<video id="streaming"></video>
+<video autoplay playsinline id="webrtc"></video>
+<video autoplay playsinline id="localVideo"></video>
