--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,15 +1,15 @@
-@import 'variables';
-@import 'mixins';
-@import 'functions';
+@import "variables";
+@import "mixins";
+@import "functions";
 
-$navbar-width: map-deep-get($layout_dimensions, 'navbar-width', xLarge);
-$navbar-folded-width: map-deep-get($layout_dimensions, 'navbar-width', folded);
-$navbar-mobile-width: map-deep-get($layout_dimensions, 'navbar-width', small);
-$toolbar-height: map-deep-get($layout_dimensions, 'toolbar-height');
+$navbar-width: map-deep-get($layout_dimensions, "navbar-width", xLarge);
+$navbar-folded-width: map-deep-get($layout_dimensions, "navbar-width", folded);
+$navbar-mobile-width: map-deep-get($layout_dimensions, "navbar-width", small);
+$toolbar-height: map-deep-get($layout_dimensions, "toolbar-height");
 :host {
   app-sidebar {
     --width: #{$navbar-width};
-    &.toggled {
+    &.opened {
       --width: #{$navbar-folded-width};
       ::ng-deep {
         @include media-breakpoint-up(lg) {
@@ -20,8 +20,8 @@ $toolbar-height: map-deep-get($layout_dimensions, 'toolbar-height');
       }
     }
     @include media-breakpoint-down(md) {
-      --width: 0;
-      &.toggled {
+      --width: 0px;
+      &.opened {
         --width: #{$navbar-mobile-width};
         .sidebar-drawer {
           margin-top: #{$toolbar-height} !important;
