--- a/src/app/widget/sidebar/sidebar.component.scss
+++ b/src/app/widget/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
-@import 'variables';
-@import 'mixins';
-@import '~@angular/material/theming';
+@import "variables";
+@import "mixins";
+@import "~@angular/material/theming";
 $transition-timing: cubic-bezier(0.2, 0, 0, 1);
 $transition-duration: 0.22s;
 
@@ -39,7 +39,6 @@ $transition-duration: 0.22s;
       }
     }
   }
-
   &.right {
     flex-direction: row-reverse;
     ::ng-deep {
@@ -49,26 +48,6 @@ $transition-duration: 0.22s;
         }
         @include direction(rtl) {
           margin-left: auto;
-        }
-      }
-    }
-  }
-  @include media-breakpoint-down(md) {
-    ::ng-deep {
-      > div {
-        @include drawer() {
-          z-index: 100;
-          transform: translateX(-100%);
-        }
-        @include container() {
-          width: 100% !important;
-        }
-      }
-    }
-    &.toggled {
-      ::ng-deep {
-        @include drawer() {
-          transform: translateX(0%);
         }
       }
     }
@@ -90,6 +69,33 @@ $transition-duration: 0.22s;
     .resizer {
       z-index: 1000;
       width: 5px;
+    }
+  }
+  @include media-breakpoint-down(md) {
+    ::ng-deep {
+      > div {
+        @include drawer() {
+          z-index: 100;
+          transform: translateX(-100%);
+        }
+        @include container() {
+          width: 100% !important;
+        }
+      }
+    }
+    --width: 0px !important;
+    &.opened {
+      ::ng-deep {
+        @include drawer() {
+          transition: transform 0.2s;
+          will-change: transform;
+          transform: translateX(0%);
+          position: fixed;
+          width: 80%;
+          z-index: 999999;
+          box-shadow: 0 40px 2rem rgba(0, 0, 0, 0.175);
+        }
+      }
     }
   }
 }
