fix: customatic changes

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -29,7 +29,7 @@
     <mat-icon class="text--accent">more_horiz</mat-icon>
   </button>
   <mat-menu #moreMenu="matMenu">
-    <button mat-menu-item (click)="openChatBar()">
+    <button mat-menu-item (click)="toggleChatBar()">
       <mat-icon class="text--accent">chat</mat-icon>
       <span>Chat</span>
     </button>
