--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -1,35 +1,27 @@
-<app-navbar>
-  <app-content>
-    <app-progress-bar></app-progress-bar>
-    <app-toolbar class="w-100 d-flex justify-content-end align-items-center bg-white border-bottom"></app-toolbar>
-    <section class="router-container">
-      <app-sidebar name="chat_bar" [right]="true">
-        <div sidebar-drawer class="border-left">
-          <mat-card-content>
-            <mat-nav-list>
-              <h3 mat-subheader> Conversations </h3>
-              <mat-list-item *ngFor="let conversation of ($conversations | async)" (click)="openChatCard(conversation)">
-                <img matListAvatar ngxGravatar [src]="conversation.avatar" [email]="conversation.avatar"
-                  fallback="identicon">
-                <p matLine> {{conversation.name}} </p>
-              </mat-list-item>
-              <h3 mat-subheader> Groups </h3>
-              <mat-list-item *ngFor="let group of ($groups | async)" (click)="openGroupChatCard(group)">
-                <img matListAvatar ngxGravatar [email]="group.avatar" [src]="group.avatar" fallback="identicon">
-                <p matLine> {{group.name}} </p>
-              </mat-list-item>
-            </mat-nav-list>
-          </mat-card-content>
-        </div>
-        <div sidebar-container [@routeAnimations]="outlet?.activateEvents | async">
-          <router-outlet #outlet="outlet"></router-outlet>
-        </div>
-      </app-sidebar>
-    </section>
-    <!-- <app-footer class="p-3"> </app-footer> -->
-  </app-content>
-</app-navbar>
-
-<button mat-mini-fab class="floating-button" (click)="openCreateChatCard()">
-  <mat-icon class="font-size-20 line-height-25 h-25">add_comment</mat-icon>
-</button>
+<app-content>
+  <app-progress-bar></app-progress-bar>
+  <section class="router-container">
+    <app-sidebar name="chat_bar">
+      <div sidebar-drawer class="border-left">
+        <mat-card-content>
+          <mat-nav-list>
+            <h3 mat-subheader> Conversations </h3>
+            <mat-list-item *ngFor="let conversation of ($conversations | async)" (click)="openChatCard(conversation)">
+              <img matListAvatar ngxGravatar [src]="conversation.avatar" [email]="conversation.avatar"
+                fallback="identicon">
+              <p matLine> {{conversation.name}} </p>
+            </mat-list-item>
+            <h3 mat-subheader> Groups </h3>
+            <mat-list-item *ngFor="let group of ($groups | async)" (click)="openGroupChatCard(group)">
+              <img matListAvatar ngxGravatar [email]="group.avatar" [src]="group.avatar" fallback="identicon">
+              <p matLine> {{group.name}} </p>
+            </mat-list-item>
+          </mat-nav-list>
+        </mat-card-content>
+      </div>
+      <div sidebar-container>
+        <router-outlet></router-outlet>
+      </div>
+    </app-sidebar>
+  </section>
+</app-content>
