--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,10 @@
-@import '~bootstrap/scss/bootstrap.scss';
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import './app/app.theme';
-@import 'assets/scss/main';
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+@import "~bootstrap/scss/bootstrap.scss";
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "./app/app.theme";
+@import "assets/scss/main";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 $typography: mat-typography-config(
-  $font-family: "'Quicksand', sans-serif",
+  $font-family: "'Roboto', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400),
 );
 
